Mon May 24 14:40:11 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/rules.lib.GNU:

          Fixed a bug introduced by my earlier commit of this file today.
          The value needs to be different in LN_S=cp vs. LN_S=ln scenarios.

        * include/makeinclude/rules.local.GNU:

          Echo back the ln or cp command used for symlinking/copying the
          library or executable to the libout/dllout/exeout location.
          This takes the place of the old "Installing..." messages which are
          too confusing now that we have "make install".

Mon May 24 14:16:15 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/rules.local.GNU:

          Further refinement and simplification of commands for LN_S=cp.
          This may work on OpenVMS.

Mon May 24 11:56:32 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/rules.lib.GNU:
        * include/makeinclude/rules.local.GNU:

          Fixed cases where LN_S=cp.

        * apps/gperf/src/gperf.mpc:

          Using $(MKDIR) instead of raw mkdir.

Fri May 21 21:30:46 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ACE-INSTALL.html:
        * NEWS:

          Documented "make install"

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Changed the libcheck message to look more like the requires/avoids
          messages.

Thu May 20 22:05:24 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/ace_tests.lst:
        * tests/run_test.lst:

          Added !ARCH to two tests that won't run properly in ARCH builds.

Thu May 20 21:50:35 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/Process_Win32.pm:

          With ARCH builds, if the executable ends in "perl", don't look for
          it in the ARCH directory.

Thu May 20 18:40:46 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:
